--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div>
                     <img src="images/loginLogo.png" /></div>
                 <div class="input">
-                    <input type="text" id="username" placeholder="Enter Username"/>
+                    <input type="text" id="username" placeholder="Enter @live Account"/>
                     <input id="password" type="password" placeholder="Enter Password"/>
                 </div>
                 <div>   
